[package]
name = "lua-ryaml"
version = "0.1.0"
authors = ["Aleksandr Orlenko <zxteam@pm.me>"]
edition = "2021"
publish = false

[workspace]
members = [
    "testcrate",
]

[features]
lua54 = ["mlua/lua54"]
lua53 = ["mlua/lua53"]
lua52 = ["mlua/lua52"]
lua51 = ["mlua/lua51"]

[lib]
name = "ryaml"
crate-type = ["cdylib"]

[dependencies]
mlua = { version = "0.9.1", features = ["module", "serialize"] }
serde = "1.0"
serde_yaml = "0.9"
